Added two posts to hpc/, one post to /blog

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,11 @@ collections:
 
   blog:
     output: true
-    permalink: blog/:title
+    permalink: /blog/:title
+
+  math:
+    output: true
+    permalink: /math/:title
 
 markdown: kramdown
 
