--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,8 +10,8 @@
 - title: "HPC"
   href: "/hpc/"
 
-- title: "Blog"
-  href: "/blog/"
+- title: "Computer Science"
+  href: "/compsci/"
 
 - title: "About"
   href: "/about/"
