Hopefully the incomplete/ folder doesn't break anything

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-personal_notes.txt
-# Incomplete posts
-_compsci/2023-10-17-nqueens.md
-_deeplearning/2023-10-23-maokun.md
-_hpc/2023-10-17-amathfinal.md
-_math/2023-10-13-brown9th-exrcse-ch1.md
-_phys/2023-10-8-fusionalphas.md
-_phys/2023-10-13-debyeshield.md
-_phys/2023-10-14-lifterstages.md
-_phys/2023-10-14-mainlifts.md
-_phys/2023-10-17-examprob.md
-_phys/2023-10-18-whytolift.md
-_phys/2023-10-20-fusionreactors.md
+# personal_notes.txt
+# _compsci/2023-10-17-nqueens.md
+# _deeplearning/2023-10-23-maokun.md
+# _hpc/2023-10-17-amathfinal.md
+# _math/2023-10-13-brown9th-exrcse-ch1.md
+# _phys/2023-10-8-fusionalphas.md
+# _phys/2023-10-13-debyeshield.md
+# _phys/2023-10-14-lifterstages.md
+# _phys/2023-10-14-mainlifts.md
+# _phys/2023-10-17-examprob.md
+# _phys/2023-10-18-whytolift.md
+# _phys/2023-10-20-fusionreactors.md
