--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,8 +7,8 @@
 - title: "GPU"
   href: "/gpu/"
 
-- title: "HPC"
-  href: "/hpc/"
+- title: "Fusion"
+  href: "/fusion/"
 
 - title: "Computer Science"
   href: "/compsci/"
