--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,8 +10,8 @@
 - title: "Fusion"
   href: "/fusion/"
 
-# - title: "Computer Science"
-#   href: "/compsci/"
+- title: "CS"
+  href: "/compsci/"
 
 # - title: "About"
 #   href: "/about/"
