Changing url until it works

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: russellmatt66@gmail.com
 description: 'test'
 
 # url: 'https://russellmatt66.github.io'
-url: 'https://physicsinparallel.com'
+url: 'https://physicsinparallel.github.io'
 baseurl: ''
 
 collections:
