--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: russellmatt66@gmail.com
 
 description: 'test'
 
-# url: 'https://russellmatt66.github.io'
-url: 'https://physicsinparallel.github.io'
+url: 'https://russellmatt66.github.io'
+# url: 'https://physicsinparallel.github.io'
 baseurl: ''
 
 collections:
