Changed fusion collection to HPC, just makes more sense

--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ collections:
     output: true
     permalink: /math/:title
 
-  fusion:
-    output: true
-    permalink: /fusion/:title
-
-  # hpc:
+  # fusion:
   #   output: true
-  #   permalink: /hpc/:title
+  #   permalink: /fusion/:title
+
+  hpc:
+    output: true
+    permalink: /hpc/:title
 
   gpu:
     output: true
