--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,8 +7,8 @@
 - title: "GPU"
   href: "/gpu/"
 
-- title: "Fusion"
-  href: "/fusion/"
+- title: "HPC"
+  href: "/hpc/"
 
 - title: "CS"
   href: "/compsci/"
