--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,14 @@ markdown: kramdown
 # Syntax highlighting
 highlighter: rouge
 # Or this if not on GitHub (?):
-# kramdown:
-  # input: GFM
-  # syntax_highlighter: rouge
+kramdown:
+  input: GFM
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
 sass:
   style: :compressed
